# python_packaging

./: README.md  requirements.txt  setup.cfg  setup.py
dummy_app/: __init__.py  dummy_app.py
my_pypackage/: __init__.py  imported_lib.py  standard_lib.py  ugly_script.py
tests/: dummy_test.py
