### setup.cfg
# See http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# for a detailed explanation of how to structure this file.
[metadata]
# Basic metadata: name, version, author, email address:
name = mypy
version = 0.0.0
author = Jacob Hummel
author_email = jacob.a.hummel@gmail.com
# One-line project description
description = A very simple demo package.
# Pull the detailed description from the project readme.
long_description = file: README.md
# Home page for the project, e.g., git repo, doc page, etc.
url = https://github.com/hummel/python_packaging
# Additional pages pertaining to the project.
project_urls =
	Source = https://github.com/hummel/python_packaging
# For an explanation of classifiers, see https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux

# See http://setuptools.readthedocs.io/en/latest/setuptools.html#options
# for a full list of available setup.cfg options.
# and see https://setuptools.readthedocs.io/en/latest/setuptools.html#new-and-changed-setup-keywords
# for detailed explanations of each option.
[options]
# Project dependencies.  Can specify versions as well:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
  markdown
zip_safe = True
include_package_data = True
packages = find:

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/tutorials/distributing-packages/#wheels
universal=0